[gd_scene load_steps=4 format=3 uid="uid://bfic21tqcvxhy"]

[ext_resource type="Script" path="res://Menu/Buttons/Scripts/LevelButton.gd" id="1_txxvk"]
[ext_resource type="LabelSettings" uid="uid://bqg16poqvchfh" path="res://Fonts/LevelButtonName.tres" id="3_ls2ku"]
[ext_resource type="Script" path="res://Menu/Buttons/Scripts/DifficultySelect.gd" id="3_nt5ee"]

[node name="LevelButton" type="TextureButton"]
offset_right = 504.0
offset_bottom = 64.0
script = ExtResource("1_txxvk")

[node name="Shape" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Difficulty" type="TextureButton" parent="Shape"]
layout_mode = 0
offset_left = -128.0
offset_right = -8.0
offset_bottom = 64.0
script = ExtResource("3_nt5ee")

[node name="ColorRect" type="ColorRect" parent="Shape/Difficulty"]
offset_right = 120.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0.00784314, 0.0941176, 0.152941, 1)

[node name="Label" type="Label" parent="Shape/Difficulty"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 64.0
text = "Easy"
label_settings = ExtResource("3_ls2ku")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Control" parent="Shape"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Shape/Name"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0.00784314, 0.0941176, 0.152941, 1)

[node name="Label" type="Label" parent="Shape/Name"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 64.0
text = "Level One"
label_settings = ExtResource("3_ls2ku")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Time" type="Control" parent="Shape"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Shape/Time"]
offset_left = 160.0
offset_right = 304.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0.00784314, 0.0941176, 0.152941, 1)

[node name="Label" type="Label" parent="Shape/Time"]
offset_left = 160.0
offset_right = 304.0
offset_bottom = 64.0
text = "Time: 3:40"
label_settings = ExtResource("3_ls2ku")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Control" parent="Shape"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Shape/Score"]
offset_left = 312.0
offset_right = 504.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0.00784314, 0.0941176, 0.152941, 1)

[node name="Label" type="Label" parent="Shape/Score"]
offset_left = 312.0
offset_right = 504.0
offset_bottom = 64.0
text = "Score: 1499"
label_settings = ExtResource("3_ls2ku")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -50.0
bus = &"Music"

[node name="DifficultySelect" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="DifficultySelect"]
offset_left = 192.0
offset_right = 504.0
offset_bottom = 64.0
color = Color(0.227451, 0.282353, 0.321569, 1)

[node name="ColorRect2" type="ColorRect" parent="DifficultySelect"]
offset_right = 192.0
offset_bottom = 64.0
color = Color(0.00784314, 0.0941176, 0.152941, 1)

[node name="Decrease" type="TextureButton" parent="DifficultySelect"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="Polygon2D" type="Polygon2D" parent="DifficultySelect/Decrease"]
position = Vector2(8, 8)
scale = Vector2(0.833333, 0.75)
polygon = PackedVector2Array(57.6, 0, 0, 32, 57.6, 64, 57.6, 53.3333, 19.2, 32, 57.6, 10.6667)

[node name="Increase" type="TextureButton" parent="DifficultySelect"]
layout_mode = 0
offset_left = 128.0
offset_right = 192.0
offset_bottom = 64.0

[node name="Polygon2D" type="Polygon2D" parent="DifficultySelect/Increase"]
position = Vector2(8, 8)
scale = Vector2(0.833333, 0.75)
polygon = PackedVector2Array(0, 0, 57.6, 32, 0, 64, 0, 53.3333, 38.4, 32, 0, 10.6667)

[connection signal="mouse_entered" from="Shape/Difficulty" to="." method="_on_difficulty_mouse_entered"]
[connection signal="mouse_exited" from="Shape/Difficulty" to="." method="_on_difficulty_mouse_exited"]
[connection signal="pressed" from="Shape/Difficulty" to="." method="_on_difficulty_pressed"]
[connection signal="pressed" from="DifficultySelect/Decrease" to="." method="_on_decrease_pressed"]
[connection signal="pressed" from="DifficultySelect/Increase" to="." method="_on_increase_pressed"]
